# ComputationApp

./: .gitignore  CMakeLists.txt  calculate.c  test.parquet
consts/: POSITIONS.h
file_handling/: file_handling.c  file_handling.h
threads_functionality/: results.h  thread_argument.h
threads_functionality/thread_computation/: thread_computation.c  thread_computation.h
